[FIX/IT-77] Gateway client 리뷰 반영